# PolysolveLib

./: ReadMe.md  pyproject.toml  solver.py
docs/source/: conf.py
polysolve/: __init__.py  solver.py
polysolve.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
