[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Siddharth Dhanpal", email = "dhanpal.siddharth@gmail.com"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "This is a test project to learn project management"
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["cowsay"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/XXX/polysolve"
Repository="https://github.com/XXX/polysolve.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
